# nina-fw

./: .gitmodules  combine.py  partitions.csv  platformio.ini
components/arduino/: CMakeLists.txt  Kconfig.projbuild
components/arduino/libraries/WiFi/src/: WiFi.cpp
components/nina-fw/: CMakeLists.txt
components/nina-fw/libraries/SPIS/src/: SPIS.cpp
components/nina-fw/libraries/WiFi/src/: WiFi.cpp  WiFiClient.cpp  WiFiServer.cpp
data/: remove_expired_certs.py  roots.pem
main/: CMakeLists.txt  CommandHandler.cpp  sketch.ino.cpp
